--- a/src/assets/lang/language.es.json
+++ b/src/assets/lang/language.es.json
@@ -168,7 +168,7 @@
   "somethingWentWrong": "Algo salio mal",
   "researchProgress": "Progreso de investigacion",
   "communityLinks": "Enlaces de comunidad",
-  "social": "Socials",
+  "social": "Sociales",
   "shareContent": "¡Estoy usando la aplicación asistente de No Man's Sky! Disponible en Google Play y en iOS App Store #NoMansSky #AssistantNMS #Android #IOS",
   "shareTitle": "¡Aplicación asistente de No Man's Sky!",
   "share": "Compartir",
@@ -343,17 +343,17 @@
   "percentage": "{0}%",
   "lightYear": "{0} años luz",
   "meter": "{0} metros",
-  "stats": "Stats",
-  "proceduralStats": "Stats (Min: {0}, Max: {1})",
-  "statAlwaysIncluded": "Always included",
-  "statPossible": "Possible",
-  "translationPercentageComplete": "Translation per Language",
-  "useTranslationTool": "Use Translation Tool",
-  "norwegian": "Norwegian",
+  "proceduralStats": "Estadísticas Min Max",
+  "stats": "Estadísticas",
+  "statAlwaysIncluded": "Siempre incluidas",
+  "statPossible": "Posible",
+  "translationPercentageComplete": "Traducción por lenguaje",
+  "useTranslationTool": "Utilizar herramienta de traducción",
+  "norwegian": "Noruego",
   "nmsfm": "NMSFM",
-  "steamNews": "Steam News",
-  "steamBranches": "Steam Branches",
+  "steamNews": "Noticias de Steam",
   "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "steamBranches": "Steam Branches",
   "nmsNews": "No Man's Sky News",
   "nmsNewsExplanation": "The first News page contains articles posted on the No Man's Sky website on their News page, these items are less frequent than the Release Notes. \n\nThe Release Notes page contains the patch notes that Hello Games writes and publishes to the Release Notes page on the No Man's Sky website. These Release Notes are usually platform specific.\n\nThe Steam Branches page contains a list of the different branches that No Man's Sky has on Steam. The Public branch is the version of the game that everyone can play. The Experimental branch contains game files that only people who have signed up to the NMS beta can access and the Internal branch is for Hello Games staff only. When updates come to No Man's Sky, they usually get moved to Internal, then Experimental and finally to the Public branch.\n\nThe Steam News page contains the collection of posts that Hello Games has made on the Steam News section, usually updated less frequently than the News page on the No Man's Sky homepage\n",
   "tapToExpand": "Tap to expand",
@@ -369,5 +369,10 @@
   "eggModificationAggression": "Aggression",
   "eggModificationIndependence": "Independence",
   "eggModificationNeuralCalibrator": "Neural Calibrator",
-  "hashCode": "C0554DCDE6F4F6FB380F34E3A5366A66"
+  "secondsAbbrev": "{0}s",
+  "minutesAbbrev": "{0}m",
+  "minutesSecondsAbbrev": "{0}m {1}s",
+  "viewTrackList": "View list of tracks",
+  "nmsfmCreator": "NMSFM creator",
+  "hashCode": "CBBDF3667966ABB3ABFF78F37D7E3CA6"
 }
