--- a/src/assets/lang/language.fr.json
+++ b/src/assets/lang/language.fr.json
@@ -343,8 +343,8 @@
   "percentage": "{0}%",
   "lightYear": "{0} al",
   "meter": "{0} m",
-  "stats": "Stats ",
   "proceduralStats": "Stats (Min: {0}, Max: {1})",
+  "stats": "Stats ",
   "statAlwaysIncluded": "Toujours inclus ",
   "statPossible": "Possible",
   "translationPercentageComplete": "Traduction par language ",
@@ -352,22 +352,27 @@
   "norwegian": "Norvégien ",
   "nmsfm": "NMS Radio",
   "steamNews": "News Steam",
-  "steamBranches": "Branche pour steam",
   "nmsfmSubtitle": "Musique pour les voyageurs, par des voyageurs ",
+  "steamBranches": "Branche pour steam",
   "nmsNews": "News No Man's Sky ",
   "nmsNewsExplanation": "La première page News contient des articles publiés sur le site de No Man's Sky, sur leur page News, ces éléments sont moins fréquents que les patch notes.  La page Notes de version contient les notes de mise à jour que Hello Games écrit et publie sur la page Notes de version du site Web No Man's Sky.  Ces notes de publication sont généralement spécifiques à la plate-forme.  La page Branche pour Steam contient une liste des différentes branches de No Man's Sky sur Steam.  La branche publique est la version du jeu à laquelle tout le monde peut jouer.  La branche Experimental contient des fichiers de jeu auxquels seules les personnes qui se sont inscrites à la version bêta de NMS peuvent accéder et la branche interne est réservée au personnel de Hello Games.  Lorsque des mises à jour arrivent sur No Man's Sky, elles sont généralement déplacées vers Internal, puis Experimental et enfin vers la branche Public.  La page News Steam contient la collection de messages que Hello Games a publiés sur la section News Steam, généralement mis à jour moins fréquemment que la page News sur la page d'accueil de No Man's Sky.",
-  "tapToExpand": "Tap to expand",
-  "oneResource": "One resource",
-  "oneBlueprint": "One blueprint",
+  "tapToExpand": "Appuyez pour agrandir",
+  "oneResource": "Une ressource",
+  "oneBlueprint": "Un schéma",
   "gek": "Gek",
   "vykeen": "Vy'keen",
   "korvax": "Korvax",
-  "manufacturingFacilityFactory": "{0} Factory {1}",
-  "manufacturingFacilityHarvestor": "{0} Harvestor {1}",
-  "eggModification": "Egg Modification",
-  "eggModificationHelpfulness": "Helpfulness",
-  "eggModificationAggression": "Aggression",
-  "eggModificationIndependence": "Independence",
-  "eggModificationNeuralCalibrator": "Neural Calibrator",
-  "hashCode": "825039BA9FDD239CB65366F67E02C956"
+  "manufacturingFacilityFactory": "Usine {0} {1}",
+  "manufacturingFacilityHarvestor": "Plantation {0} {1}",
+  "eggModification": "Modification d'œuf",
+  "eggModificationHelpfulness": "Utilité",
+  "eggModificationAggression": "Agression",
+  "eggModificationIndependence": "Indépendance",
+  "eggModificationNeuralCalibrator": "Calibrage neuronale",
+  "secondsAbbrev": "{0} s",
+  "minutesAbbrev": "{0} m",
+  "minutesSecondsAbbrev": "{0} m {1} s",
+  "viewTrackList": "Afficher la liste des musiques",
+  "nmsfmCreator": "Créateur de NMS Radio",
+  "hashCode": "3AC3DF08F98510F95BB49D4122E59686"
 }
