--- a/src/assets/lang/language.hu.json
+++ b/src/assets/lang/language.hu.json
@@ -38,7 +38,7 @@
   "buyMeACoffee": "Vegyél nekem egy kávét",
   "patreon": "Patreon",
   "paypal": "PayPal",
-  "kofi": "Ko-fi",
+  "kofi": "Kávé",
   "searchItems": "Elem keresés",
   "rawMaterials": "Nyersanyagok",
   "products": "Elkészített termékek",
@@ -229,25 +229,25 @@
   "switchUser": "Felhasználó váltás",
   "logout": "Kijelentkezés",
   "turkish": "Török",
-  "completed": "Completed",
+  "completed": "Elkészült",
   "notStarted": "Nem kezdődött el ",
   "hours": "{0} óra",
   "days": "{0} nap",
-  "hour": "{0} hour",
-  "day": "{0} day",
-  "timerComplete": "Timer Complete",
-  "termsAndConditions": "Terms and Conditions",
+  "hour": "Óra",
+  "day": "Nap",
+  "timerComplete": "Az időzítő lejárt",
+  "termsAndConditions": "Felhasználási feltételek",
   "legal": "Legal",
-  "more": "More",
+  "more": "Több",
   "galacticAtlas": "Galaktikus atlasz",
   "legalNotice": "This App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
-  "czech": "Czech",
-  "thankYou": "Thank you!",
-  "thankYouForSubmittingFriendCode": "Thank you for submitting your Friend Code.",
-  "weDoNotStoreEmails": "The Assistant for No Man's Sky apps does not store your email address. We use it for confirmation.",
-  "emailHashExample": "In our database your email address looks like this: ",
-  "confirmFriendCode": "Confirm Friend Code",
-  "emailBackupLink": "If that doesn't work, copy and paste the following link in your browser:",
+  "czech": "Cseh",
+  "thankYou": "Köszönjük szépen!",
+  "thankYouForSubmittingFriendCode": "Köszönjük a Barát Kódod megosztását.",
+  "weDoNotStoreEmails": "A(z) The Assistant for No Man's Sky applikáció nem menti el az e-mail címed, csak visszaigazolásra használja.",
+  "emailHashExample": "Az adatbázisunkban az e-mail címed így néz ki:",
+  "confirmFriendCode": "Barát Kód Megerősítése",
+  "emailBackupLink": "Ha ez nem működne másold, majd illeszd be az alábbi linket a böngésződbe.",
   "anyQuestionsReplyToThisEmail": "If you have any questions, just reply to this email. We are always happy to help.",
   "emailSignOff": "Kind Regards,",
   "emailSignOffTeam": "AssistantNMS Team",
@@ -343,8 +343,8 @@
   "percentage": "{0}%",
   "lightYear": "{0} ly",
   "meter": "{0} m",
-  "stats": "Stats",
   "proceduralStats": "Stats (Min: {0}, Max: {1})",
+  "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
   "translationPercentageComplete": "Translation per Language",
@@ -352,8 +352,8 @@
   "norwegian": "Norwegian",
   "nmsfm": "NMSFM",
   "steamNews": "Steam News",
-  "steamBranches": "Steam Branches",
   "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "steamBranches": "Steam Branches",
   "nmsNews": "No Man's Sky News",
   "nmsNewsExplanation": "The first News page contains articles posted on the No Man's Sky website on their News page, these items are less frequent than the Release Notes. \n\nThe Release Notes page contains the patch notes that Hello Games writes and publishes to the Release Notes page on the No Man's Sky website. These Release Notes are usually platform specific.\n\nThe Steam Branches page contains a list of the different branches that No Man's Sky has on Steam. The Public branch is the version of the game that everyone can play. The Experimental branch contains game files that only people who have signed up to the NMS beta can access and the Internal branch is for Hello Games staff only. When updates come to No Man's Sky, they usually get moved to Internal, then Experimental and finally to the Public branch.\n\nThe Steam News page contains the collection of posts that Hello Games has made on the Steam News section, usually updated less frequently than the News page on the No Man's Sky homepage\n",
   "tapToExpand": "Tap to expand",
@@ -369,5 +369,10 @@
   "eggModificationAggression": "Aggression",
   "eggModificationIndependence": "Independence",
   "eggModificationNeuralCalibrator": "Neural Calibrator",
-  "hashCode": "99975EB1773557B4DFEEBFFF6D8923CA"
+  "secondsAbbrev": "{0}s",
+  "minutesAbbrev": "{0}m",
+  "minutesSecondsAbbrev": "{0}m {1}s",
+  "viewTrackList": "View list of tracks",
+  "nmsfmCreator": "NMSFM creator",
+  "hashCode": "1C22EFA0793BB441F326B1999E11C875"
 }
