--- a/src/assets/lang/language.it.json
+++ b/src/assets/lang/language.it.json
@@ -343,8 +343,8 @@
   "percentage": "{0}%",
   "lightYear": "{0}al",
   "meter": "{0} m",
-  "stats": "Statistiche",
   "proceduralStats": "Statistiche (Min: {0}, Max: {1})",
+  "stats": "Statistiche",
   "statAlwaysIncluded": "Sempre Incluso",
   "statPossible": "Possibile",
   "translationPercentageComplete": "Traduzione per lingua",
@@ -352,8 +352,8 @@
   "norwegian": "Norvegese",
   "nmsfm": "NMSFM",
   "steamNews": "Steam News",
-  "steamBranches": "Categorie Steam",
   "nmsfmSubtitle": "Musica per viaggiatori da viaggiatori",
+  "steamBranches": "Categorie Steam",
   "nmsNews": "No Man's Sky News",
   "nmsNewsExplanation": "La prima pagina di notizie contiene articoli pubblicati sul sito Web di No Man's Sky nella loro pagina di news, e questi elementi sono meno frequenti rispetto alle note di rilascio. La pagina Note di rilascio sulla versione contiene le note sulla patch che Hello Games scrive e pubblica nella pagina Note di rilascio sul sito Web di No Man's Sky. Queste note di rilascio sono generalmente specifiche per una piattaforma. La pagina delle categorie di Steam contiene un elenco categorie che No Man's Sky ha su Steam. La categoria  pubblica è la versione del gioco a cui tutti possono giocare. La sezione sperimentale contiene file di gioco a cui possono accedere solo le persone che si sono registrate alla versione beta di NMS e la sezione interna è riservata al personale di Hello Games. Quando gli aggiornamenti arrivano a No Man's Sky, di solito vengono spostati in Interno, quindi in Sperimentale e infine nella sezione Pubblico. La pagina delle notizie di Steam contiene la raccolta dei post che Hello Games ha pubblicato nella sezione delle notizie di Steam, solitamente aggiornati con minore frequenza rispetto alla pagina delle notizie sulla home page di No Man's Sky",
   "tapToExpand": "Clicca per espandere",
@@ -369,5 +369,10 @@
   "eggModificationAggression": "Aggression",
   "eggModificationIndependence": "Independence",
   "eggModificationNeuralCalibrator": "Neural Calibrator",
-  "hashCode": "1E3030F66255549B3BD8BEA7E3C88882"
+  "secondsAbbrev": "{0}s",
+  "minutesAbbrev": "{0}m",
+  "minutesSecondsAbbrev": "{0}m {1}s",
+  "viewTrackList": "View list of tracks",
+  "nmsfmCreator": "NMSFM creator",
+  "hashCode": "FC37F746DC405E19A974D0683BB0A669"
 }
