--- a/src/assets/lang/language.pl.json
+++ b/src/assets/lang/language.pl.json
@@ -181,7 +181,7 @@
   "noticeReject": "Nie pokazuj ponownie",
   "valentines": "Walentynki",
   "viewItemsAdded": "Pokaż dodane przedmioty",
-  "newItemsAdded": "Nowe przedmioty dodane",
+  "newItemsAdded": "Nowe dodane przedmioty",
   "proceduralProducts": "Produkty proceduralne",
   "orderBy": "Ułóż w kolejności",
   "name": "Nazwa",
@@ -343,8 +343,8 @@
   "percentage": "{0}%",
   "lightYear": "{0} lś",
   "meter": "{0}m",
-  "stats": "Statystyki",
   "proceduralStats": "Statystyki (Min: {0}, Maks: {1})",
+  "stats": "Statystyki",
   "statAlwaysIncluded": "Zawsze uwzględnione",
   "statPossible": "Możliwe",
   "translationPercentageComplete": "Tłumaczenia na język",
@@ -352,22 +352,27 @@
   "norwegian": "norweski",
   "nmsfm": "NMSFM",
   "steamNews": "Aktualności Steam",
-  "steamBranches": "Gałęzie Steam",
   "nmsfmSubtitle": "Muzyka od podróżników dla podróżników",
+  "steamBranches": "Gałęzie Steam",
   "nmsNews": "Aktualności No Man’s Sky",
   "nmsNewsExplanation": "Pierwsza strona z wiadomościami zawiera artykuły opublikowane w witrynie No Man's Sky na ich stronie z informacjami o wydaniu, te pozycje są rzadsze niż uwagi do wydania.  Strona z informacjami o wydaniu zawiera informacje o łatkach, które Hello Games pisze i publikuje na stronie internetowej No Man's Sky.  Te informacje o wydaniu są zwykle specyficzne dla platformy.  Strona oddziałów Steam zawiera listę różnych gałęzi, które No Man's Sky ma na Steam.  Gałąź publiczna to wersja gry, w którą może grać każdy.  Gałąź eksperymentalna zawiera pliki gry, do których mają dostęp tylko osoby, które zapisały się do wersji beta NMS, a gałąź wewnętrzna jest przeznaczona tylko dla pracowników Hello Games.  Kiedy aktualizacje nadchodzą do No Man's Sky, zwykle są przenoszone do wewnętrznej, potem eksperymentalnej i wreszcie do gałęzi publicznej.  Strona Steam News zawiera zbiór postów, które Hello Games opublikowało w sekcji nowości Steam, zwykle aktualizowane rzadziej niż strona nowości na stronie głównej No Man's Sky.",
   "tapToExpand": "kliknij, by rozwinąć",
   "oneResource": "jeden z materiałów",
   "oneBlueprint": "jeden ze schematów",
-  "gek": "Gek",
-  "vykeen": "Vy'keen",
+  "gek": "gek",
+  "vykeen": "vy'keen",
   "korvax": "Korvax",
-  "manufacturingFacilityFactory": "{0} Factory {1}",
-  "manufacturingFacilityHarvestor": "{0} Harvestor {1}",
-  "eggModification": "Egg Modification",
-  "eggModificationHelpfulness": "Helpfulness",
-  "eggModificationAggression": "Aggression",
-  "eggModificationIndependence": "Independence",
-  "eggModificationNeuralCalibrator": "Neural Calibrator",
-  "hashCode": "9E121A2453F25F67D85A9E9E0286C325"
+  "manufacturingFacilityFactory": "ośrodek produkcyjny",
+  "manufacturingFacilityHarvestor": "zbieracz",
+  "eggModification": "modyfikacje jajka",
+  "eggModificationHelpfulness": "przydatność",
+  "eggModificationAggression": "agresja",
+  "eggModificationIndependence": "niepodległość",
+  "eggModificationNeuralCalibrator": "kalibrator nerwów",
+  "secondsAbbrev": "{0}s",
+  "minutesAbbrev": "{0}m",
+  "minutesSecondsAbbrev": "{0}m {1}s",
+  "viewTrackList": "View list of tracks",
+  "nmsfmCreator": "NMSFM creator",
+  "hashCode": "226BD758BBB6E31474629C0D2BA6EC33"
 }
