--- a/src/assets/lang/language.pt-br.json
+++ b/src/assets/lang/language.pt-br.json
@@ -22,7 +22,7 @@
   "weekendMissionSeason1Json": "pt-br/WeekendMissionsSeason1.lang",
   "weekendMissionSeason2Json": "pt-br/WeekendMissionsSeason2.lang",
   "weekendMissionSeason3Json": "pt-br/WeekendMissionsSeason3.lang",
-  "title": "Todas as Receitas",
+  "title": "Todas Receitas",
   "loading": "Carregando",
   "about": "Sobre",
   "aboutContent": "Por que me preocupei em construir este app?\nUm dia eu estava jogando No Man's Sky e queria planejar quais recursos cultiváveis eu deveria ter em uma nova base, e pensei que seria mais fácil baixar um aplicativo da Play Store do que acessar o Wiki no meu segundo monitor. Encontrei um aplicativo e fui barrado por uma página de pagamento enquanto tentava olhar receitas de materiais criados. Irritado, decidi criar um aplicativo que fosse gratuito para qualquer pessoa usar. Também foi uma ótima desculpa para brincar um pouco com desenvolvimento de aplicativos no Flutter.\n\nObs: Eu também tenho um blog, Inside my Mind - by Kurt Lourens. Eu não tenho feito tanto uso dele quanto poderia, mas tenho alguns artigos 😋.\n\nEste aplicativo não é afiliado à Hello Games ou No Man's Sky, nem suas subsidiárias ou suas empresas controladoras, cujos nomes, logotipos e produtos são exibidos neste aplicativo.",
@@ -343,8 +343,8 @@
   "percentage": "{0}%",
   "lightYear": "{0} al",
   "meter": "{0} m",
-  "stats": "Estatísticas",
   "proceduralStats": "Estatísticas (Min: {0}, Max: {1})",
+  "stats": "Estatísticas",
   "statAlwaysIncluded": "Sempre incluso",
   "statPossible": "Possível",
   "translationPercentageComplete": "Tradução por língua",
@@ -352,22 +352,27 @@
   "norwegian": "Norueguês",
   "nmsfm": "NMS FM",
   "steamNews": "Notícias da Steam",
-  "steamBranches": "Ramos da Steam",
   "nmsfmSubtitle": "Música para Viajantes, por Viajantes",
+  "steamBranches": "Ramos da Steam",
   "nmsNews": "Notícias de No Man's Sky",
   "nmsNewsExplanation": "A primeira Página de Notícias contém artigos publicados na página de notícias do site do No Man's Sky. Esses itens são menos frequentes do que as notas de lançamento. A página Notas de Versão contém as notas de patch que a Hello Games grava e publica na página Notas de Versão no site No Man's Sky. Essas notas de versão geralmente são específicas da plataforma. A página Steam Branches contém uma lista dos diferentes branches que No Man's Sky possui na Steam. O Branch Público é a versão do jogo que todos podem jogar. A Ramificação Experimental contém arquivos de jogos que apenas as pessoas que se inscreveram no beta do NMS podem acessar, e a Ramificação Interna é apenas para a equipe do Hello Games. Quando as atualizações chegam ao No Man's Sky, elas geralmente são movidas para Interno, Experimental e, finalmente, para o ramal Público. A página Steam News está a coleção de posts que a Hello Games fez na seção Steam News, geralmente atualizada com menos frequência do que a página News na página inicial do No Man's Sky",
-  "tapToExpand": "Tap to expand",
-  "oneResource": "One resource",
-  "oneBlueprint": "One blueprint",
+  "tapToExpand": "Toque para Expandir",
+  "oneResource": "Um recurso",
+  "oneBlueprint": "Uma planta",
   "gek": "Gek",
   "vykeen": "Vy'keen",
   "korvax": "Korvax",
   "manufacturingFacilityFactory": "{0} Factory {1}",
   "manufacturingFacilityHarvestor": "{0} Harvestor {1}",
-  "eggModification": "Egg Modification",
-  "eggModificationHelpfulness": "Helpfulness",
-  "eggModificationAggression": "Aggression",
-  "eggModificationIndependence": "Independence",
-  "eggModificationNeuralCalibrator": "Neural Calibrator",
-  "hashCode": "3A80B35AC4E72B942941EBEA1E706873"
+  "eggModification": "Modificação do Ovo",
+  "eggModificationHelpfulness": "Gentileza",
+  "eggModificationAggression": "Agressividade",
+  "eggModificationIndependence": "Independência",
+  "eggModificationNeuralCalibrator": "Calibrador Neural",
+  "secondsAbbrev": "{0}s",
+  "minutesAbbrev": "{0}m",
+  "minutesSecondsAbbrev": "{0}m {1}s",
+  "viewTrackList": "Visualizar lista de trilhas",
+  "nmsfmCreator": "Criador da NMSFM",
+  "hashCode": "13D7B6B3E20F71661492159453725835"
 }
