--- a/src/assets/lang/language.ru.json
+++ b/src/assets/lang/language.ru.json
@@ -343,8 +343,8 @@
   "percentage": "{0}%",
   "lightYear": "{0} св.г.",
   "meter": "{0} м",
-  "stats": "Возможные эффекты",
   "proceduralStats": "Возможные значения от {0} до {1}",
+  "stats": "Возможные эффекты",
   "statAlwaysIncluded": "Даётся всегда",
   "statPossible": "Доступно",
   "translationPercentageComplete": "Перевод для языка",
@@ -352,8 +352,8 @@
   "norwegian": "Норвежский",
   "nmsfm": "Радио NMS",
   "steamNews": "Новости Steam",
-  "steamBranches": "Ветки Steam",
   "nmsfmSubtitle": "Музыка для странников от странников",
+  "steamBranches": "Ветки Steam",
   "nmsNews": "Новости No Man's Sky",
   "nmsNewsExplanation": "Первая страница новостей содержит статьи, размещенные на сайте No Man's Sky на их странице новостей, эти элементы встречаются реже, чем примечания к выпуску. Страница примечаний к выпуску содержит примечания к патчу, которые Hello Games пишет и публикует на странице примечаний к выпуску на веб-сайте No Man's Sky. Эти примечания к выпуску обычно зависят от платформы. Страница веток Steam содержит список различных веток, которые есть в No Man's Sky в Steam. Публичная ветка - это версия игры, в которую может играть каждый. Экспериментальная ветвь содержит файлы игры, к которым могут получить доступ только люди, которые подписались на бета-версию NMS, а внутренняя ветка предназначена только для сотрудников Hello Games. Когда обновления приходят в No Man's Sky, они обычно перемещаются во внутреннюю, затем экспериментальную и, наконец, в общедоступную ветку. Страница новостей Steam содержит коллекцию публикаций Hello Games в разделе новостей Steam, которые обычно обновляются реже, чем страница новостей на главной странице No Man's Sky.",
   "tapToExpand": "Просмотреть детали",
@@ -369,5 +369,10 @@
   "eggModificationAggression": "Aggression",
   "eggModificationIndependence": "Independence",
   "eggModificationNeuralCalibrator": "Neural Calibrator",
-  "hashCode": "C626A4F81BAE47A5C5D79CB57578C80F"
+  "secondsAbbrev": "{0}s",
+  "minutesAbbrev": "{0}m",
+  "minutesSecondsAbbrev": "{0}m {1}s",
+  "viewTrackList": "View list of tracks",
+  "nmsfmCreator": "NMSFM creator",
+  "hashCode": "70B8BF8F0E011A4A3BFF068406D480C2"
 }
