--- a/src/assets/lang/language.tr.json
+++ b/src/assets/lang/language.tr.json
@@ -343,8 +343,8 @@
   "percentage": "{0}%",
   "lightYear": "{0} ly",
   "meter": "{0} m",
-  "stats": "Stats",
   "proceduralStats": "Stats (Min: {0}, Max: {1})",
+  "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
   "translationPercentageComplete": "Translation per Language",
@@ -352,8 +352,8 @@
   "norwegian": "Norwegian",
   "nmsfm": "NMSFM",
   "steamNews": "Steam News",
-  "steamBranches": "Steam Branches",
   "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "steamBranches": "Steam Branches",
   "nmsNews": "No Man's Sky News",
   "nmsNewsExplanation": "The first News page contains articles posted on the No Man's Sky website on their News page, these items are less frequent than the Release Notes. \n\nThe Release Notes page contains the patch notes that Hello Games writes and publishes to the Release Notes page on the No Man's Sky website. These Release Notes are usually platform specific.\n\nThe Steam Branches page contains a list of the different branches that No Man's Sky has on Steam. The Public branch is the version of the game that everyone can play. The Experimental branch contains game files that only people who have signed up to the NMS beta can access and the Internal branch is for Hello Games staff only. When updates come to No Man's Sky, they usually get moved to Internal, then Experimental and finally to the Public branch.\n\nThe Steam News page contains the collection of posts that Hello Games has made on the Steam News section, usually updated less frequently than the News page on the No Man's Sky homepage\n",
   "tapToExpand": "Tap to expand",
@@ -369,5 +369,10 @@
   "eggModificationAggression": "Aggression",
   "eggModificationIndependence": "Independence",
   "eggModificationNeuralCalibrator": "Neural Calibrator",
-  "hashCode": "B533AE5B357408237AEEDE2EE38D266A"
+  "secondsAbbrev": "{0}s",
+  "minutesAbbrev": "{0}m",
+  "minutesSecondsAbbrev": "{0}m {1}s",
+  "viewTrackList": "View list of tracks",
+  "nmsfmCreator": "NMSFM creator",
+  "hashCode": "250691EEA6B00D35FFD0612674613ADA"
 }
